--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,12 +1,9 @@
 body
 {
-<<<<<<< HEAD
-    color: rgb(193, 102, 23);
-=======
-    color: rgb(49, 23, 143);
->>>>>>> cabecera
+    background: #1e1f24;
+    color: #333;
     text-align: center;
-    font-family: 'Arial'
+    font-family: Arial;
     font-size: 16px;
     margin: 0;
     padding: 0;
@@ -14,12 +11,18 @@ body
 
 #cabecera
 {
-    background: rgb(65, 170, 51);
+    background: #37488b;
     box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
     color: white;
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
+}
+
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
 }
 
 #cabecera #tagline
@@ -44,5 +47,13 @@ body
 }
 #post
 {
+    background: white;
     padding: 1em;
+}
+#footer 
+{
+    background-color: #777;
+    color: white;
+    text-align: center;
+    padding: o.5em;
 }
