--- a/css/estilos.css
+++ b/css/estilos.css
@@ -52,7 +52,7 @@ body
 }
 #footer 
 {
-    background-color: #777;
+    background-color: #37488b;
     color: white;
     text-align: center;
     padding: o.5em;
